--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -79,11 +79,23 @@
     p:nth-of-type(2) {
       width: 30rem;
 
+      @include tablet {
+        width: 100%;
+      }
+
       @include mobile {
         width: 100%;
 
-        text-align: justify;
+        text-align: center;
       }
+    }
+
+    @include tablet {
+      text-align: center;
+    }
+
+    @include mobile {
+      text-align: center;
     }
   }
 
@@ -92,67 +104,65 @@
     gap: 3rem;
 
     &-items {
-      position: relative;
+      .seller-position {
+        position: relative;
 
-      img {
-        width: 100%;
-        height: 100%;
+        &:hover .seller-bg,
+        &:hover .seller-base {
+          opacity: 1;
+        }
 
-        object-fit: cover;
+        &:hover .seller-base {
+          cursor: pointer;
+        }
       }
 
       .seller-click {
-        position: relative;
-
-        &:hover a:nth-child(1)::after {
-          display: block;
-        }
-
-        &:hover + .seller-icon {
-          display: block;
+        @include tablet {
+          max-width: 30rem;
         }
       }
 
-      .seller-click > a:nth-child(1) {
-        @include mobile {
-          display: inline-block;
-          max-width: 20rem;
-        }
-      }
+      .seller-bg {
+        background-color: rgba(236, 236, 236, 0.363);
 
-      .seller-click > a:nth-child(1)::after {
-        content: "";
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(255, 255, 255, 0.63);
 
-        display: none;
+        opacity: 0;
+
+        transition: all 0.1s ease-in;
       }
 
-      .seller-icon {
+      .seller-base {
         position: absolute;
-        top: 1rem;
-        right: 1rem;
+        top: 2rem;
+        right: 2rem;
 
-        display: none;
+        opacity: 0;
+        transition: all 0.2s ease-in;
 
-        &-items {
-          img {
-            width: 100%;
-            height: 100%;
+        @include tablet {
+        }
 
-            object-fit: cover;
-          }
+        &-wrapper {
+          @include dflex;
+          width: 4rem;
+          height: 4rem;
+          margin-bottom: 1rem;
 
-          .background {
-            margin-bottom: 0.5rem;
-            padding: 1rem;
+          border-radius: 1rem;
+          background-color: $clr-theme;
+        }
 
-            background-color: green;
-          }
+        img {
+          width: 2.5rem;
+          height: 3rem;
+
+          object-fit: contain;
         }
       }
 
@@ -185,6 +195,10 @@
       }
     }
 
+    @include tablet {
+      flex-wrap: wrap;
+    }
+
     @include mobile {
       flex-wrap: wrap;
       gap: 2rem;
@@ -192,6 +206,8 @@
   }
 
   @include tablet {
+    flex-direction: column;
+
     margin: 5rem auto;
 
     gap: 3rem;
@@ -375,6 +391,11 @@
       @include tablet {
         font-size: 3rem;
       }
+
+      @include mobile {
+        text-align: center;
+        font-size: 2.5rem;
+      }
     }
 
     p {
@@ -400,7 +421,7 @@
         }
 
         @include mobile {
-          width: 40rem;
+          max-width: 20rem;
           height: 4rem;
 
           border-radius: 7px;
@@ -419,6 +440,14 @@
 
         &:hover {
           opacity: 0.8;
+        }
+
+        @include mobile {
+          padding: 0 1rem;
+          height: 2rem;
+          line-height: 2rem;
+
+          font-size: 1.2rem;
         }
       }
 
