--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,11 @@ footer {
 footer .copy {
   color: gray;
 }
+@media (max-width: 46.1875em) {
+  footer .copy span {
+    display: inline-block;
+  }
+}
 footer .copy a {
   color: gray;
   font-weight: bold;
@@ -79,6 +84,7 @@ footer .payment {
   footer {
     height: auto;
     padding: 2rem 0;
+    text-align: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
@@ -195,22 +201,29 @@ footer .payment {
 .header .btn {
   font-size: medium;
 }
-.header .offcanvas-title {
-  font-size: 2rem;
+.header .offcanvas-header > h5 {
+  font-size: 1.6rem;
+}
+.header .offcanvas-header > button {
+  font-size: 1.2rem;
 }
 .header .offcanvas-end {
-  width: 20rem;
-  height: 22.4rem;
-  overflow: hidden;
-  border-radius: 1rem;
+  width: 14rem;
 }
-.header .dropdown-item a {
-  color: rgb(90, 90, 90);
+.header .offcanvas-body {
+  padding: 0 !important;
 }
-.header .dropdown-item:hover {
+.header .offcanvas-body li a {
+  display: inline-block;
+  width: 100%;
+  padding: 1rem;
+  color: #3cb878;
+  font-size: 1.4rem;
+}
+.header .offcanvas-body li:hover {
   background-color: #3cb878;
 }
-.header .dropdown-item:hover a {
+.header .offcanvas-body li:hover a {
   color: white;
 }
 
@@ -255,7 +268,7 @@ footer .payment {
 }
 @media (max-width: 46.1875em) {
   .banner-title {
-    position: static;
+    display: none;
   }
 }
 .banner-title-img img {
